services/envoy/envoy.yaml
static_resources:
  listeners:
  - name: listener_0
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 10000
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          codec_type: AUTO
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains: ["*"]
              cors:
                allow_origin_string_match:
                - prefix: "*"
                allow_methods: GET, PUT, DELETE, POST, OPTIONS
                allow_headers: keep-alive,user-agent,cache-control,content-type,content-transfer-encoding,custom-header-1,x-accept-content-transfer-encoding,x-accept-response-streaming,x-user-agent,x-grpc-web,grpc-timeout,authorization,cookie,x-auth-request-user
                max_age: "1728000"
                expose_headers: custom-header-1,grpc-status,grpc-message
              routes:
              - match:
                  prefix: "/oauth2/"
                route:
                  cluster: oauth2-proxy-cluster
                typed_per_filter_config:
                  envoy.filters.http.ext_authz:
                    "@type": type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthzPerRoute
                    disabled: true
              - match:
                  prefix: "/product/swagger"
                route:
                  cluster: product-service
                  prefix_rewrite: "/swagger"
              - match:
                  prefix: "/product/"
                route:
                  cluster: product-service
                  prefix_rewrite: "/api/Product/"
                  max_grpc_timeout: 0s
              - match:
                  prefix: "/cart/swagger"
                route:
                  cluster: cart-service
                  prefix_rewrite: "/swagger"
              - match:
                  prefix: "/cart/"
                route:
                  cluster: cart-service
                  prefix_rewrite: "/api/Cart/"
                  max_grpc_timeout: 0s
          http_filters:
          - name: envoy.filters.http.cors
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.cors.v3.Cors
          - name: envoy.filters.http.grpc_web
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.grpc_web.v3.GrpcWeb
          - name: envoy.filters.http.ext_authz
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthz
              transport_api_version: V3
              http_service:
                server_uri:
                  uri: http://oauth2-proxy:4180
                  cluster: oauth2-proxy-cluster
                  timeout: 0.25s
                authorization_request:
                  allowed_headers:
                    patterns:
                    - exact: "authorization"
                    - exact: cookie
                    - exact: x-forwarded-access-token
                authorization_response:
                  allowed_upstream_headers:
                    patterns:
                    - exact: "authorization"
                    - exact: "x-forwarded-access-token"
                    - exact: "x-auth-request-user"
                    - exact: "x-auth-request-email"
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  clusters:
  - name: product-service
    connect_timeout: 0.25s
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: product-service
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: product-service
                port_value: 8080
  - name: cart-service
    connect_timeout: 0.25s
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: cart-service
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: cart-service
                port_value: 8080
  - name: oauth2-proxy-cluster
    connect_timeout: 0.25s
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: oauth2-proxy-cluster
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: oauth2-proxy
                port_value: 4180
